쿠버네티스 서비스(NodePort, 로드밸런싱), 자바 병렬프로그래밍

--- a/정리/Kubernetes/6.서비스.md
+++ b/정리/Kubernetes/6.서비스.md
@@ -75,3 +75,22 @@ kubectl get ep
 kubectl delete svc hostname-svc-clusterip
 kubectl delete -f deployment.yaml
 ```
+
+
+## NodePort
+
+```
+kubectl apply -f nodeport.yaml
+kubectl get services
+kubectl get nodes -o wide
+
+
+kubectl run -i --tty --rm debug --image-alicek106/ubuntu:curl --restart-Never -- bash
+```
+
+NodePort 타입의 서비스는 ClusterIP의 기능을 포함한다.
+
+
+## LoadBalancer
+
+클라우드 플랫폼(AWS, GCP)에서 사용할 수 있다.
