--- a/정리/Kubernetes/7.네임스페이스.md
+++ b/정리/Kubernetes/7.네임스페이스.md
@@ -17,3 +17,29 @@ app=webserver이라는 라벨을 가지는 포드만 출력
 ```shell
 kubectl get pods -l app=webserver
 ```
+
+[namespace-production](./sources/namespace/namespace-production.yaml)
+
+```shell
+kubectl apply -f namespace-production.yaml
+
+kubectl create namespace production
+
+kubectl get ns | grep production
+kubectl get ns | find production
+```
+
+네임스페이스에 리소스를 생성하려면 yaml 파일에서 metadata.namespace 항목에 설정하면 된다.
+```yaml
+metadata:
+    name: hostname-deployment-ns
+    namespace: production
+```
+
+```shell
+kubectl get pods, service -n production
+
+kubectl delete namespace production
+```
+
+<서비스 이름>.<네임스페이스 이름>.svc.cluster.local
