--- a/정리/Kubernetes/8.컨피그맵_시크릿.md
+++ b/정리/Kubernetes/8.컨피그맵_시크릿.md
@@ -20,7 +20,7 @@ spec:
 kubectl create configmap <컨피그맵 이름> <각종 설정값들>
 kubectl create configmap log-level-configmap --from-literal LOG_LEVEL=DEBUG
 
-kubectl create configmap start-k8s --from-literal k8s=kubernetes --from-literal container=docker
+kubectl create configmap start-k8s --from-literal k8s=kubernetes --from-literal container=docker # 두개의 값 설정
 
 kubectl get cm
 kubectl get configmap
@@ -30,3 +30,22 @@ kubectl describe configmap log-level-configmap
 
 kubectl get configmap log-level-configmap -o yaml
 ```
+
+## 컨피그맵의 값을 컨테이너의 환경 변수로 사용
+[파일](./sources/configmap/configmap2.yaml)
+
+* envFrom: 컨피그맵에 존재하는 모든 키-값을 가져온다.
+* configMapRef
+
+두개의 컨피그맵으로부터 갑을 가져와 환경 변수를 생성한다.
+
+yaml 파일에서 envFrom 항목은 하나의 컨피그맵에 여러 개의 키-값 쌍이 존재하더라도 모두 환경 변수로 가져오도록 설정한다.
+
+```shell
+kubectl apply -f configmap2.yaml
+
+kubectl exec container-env-example env
+```
+
+## 컨피그맵의 값을 포드 내부의 파일로 마운트해 사용
+## 컨피그맵의 데이터를 컨테이너의 환경 변수로 가져오기
