--- a/정리/Kubernetes/8.컨피그맵_시크릿.md
+++ b/정리/Kubernetes/8.컨피그맵_시크릿.md
@@ -32,10 +32,10 @@ kubectl get configmap log-level-configmap -o yaml
 ```
 
 ## 컨피그맵의 값을 컨테이너의 환경 변수로 사용
-[파일](./sources/configmap/configmap2.yaml)
+[envFrom](./sources/configmap/configmap2.yaml)
 
 * envFrom: 컨피그맵에 존재하는 모든 키-값을 가져온다.
-* configMapRef
+  * configMapRef
 
 두개의 컨피그맵으로부터 갑을 가져와 환경 변수를 생성한다.
 
@@ -46,6 +46,18 @@ kubectl apply -f configmap2.yaml
 
 kubectl exec container-env-example env
 ```
+[valueFrom](./sources/configmap/configmap3.yaml)
+
+* valueFrom: 
+  * configMapKeyRef
+
+valueFrom과 configMapKeyRef를 사용하면 여러 개의 키-값 쌍이 들어 있는 컨피그맵에서 특정 데이터만을 선택해 환경 변수로 가져 올 수 있다.
 
 ## 컨피그맵의 값을 포드 내부의 파일로 마운트해 사용
+
+[volumeMounts](./sources/configmap/configmap4.yaml)
+
+* spec.volumes: yaml 파일에서 사용할 볼륨목록을 정의한다. start-k8s라는 이름의 컨피그맵을 통해 configmap-volume 볼륨을 정의한다. 정의한 볼륨은 spec.containers 에서 참조해 사용한다.
+* spec.containers.volumeMounts: volumes 항목에서 정의된 볼륨을 컨테이너 내부의 어떤 디렉토리에 마운트할 것인지 명시한다. /etc/config 디렉터리에 있는 컨피그맵의 값이 담긴 파일이 마운트된다.
+
 ## 컨피그맵의 데이터를 컨테이너의 환경 변수로 가져오기
